# imposcr

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker_push  refresh-build.bash  run-tests.bash
imposc/: adapters.py  charts.py  main.py  requirements-dev.txt  requirements.out  requirements.txt
imposc/static/: Dockerfile.dev  components.css  index.html  maths.css  maths.html  package-lock.json  package.json  spinner.html
imposc/static/js/: api-data.js  api-data.test.js  components.js  components.test.js  index.js  listeners.js  render.js
imposc/test/: test_adapters.py  test_main.py
imposclib/: Cargo.toml  Dockerfile.dev
imposclib/imposclib/: __init__.py  config.py  imposclib.py
imposclib/src/: lib.rs
imposclib/src/dynamics/: chatter.rs  forcing_phase.rs  impact.rs  impact_map.rs  mod.rs  model_types.rs  motion.rs  parameters.rs  sticking.rs
imposclib/tests/: integration_test.rs
src/: main.rs
