[package]
name = "imposclib"
version = "0.1.0"
edition = "2018"
description = "Analysis and simulation of a simple vibro-impact model developed in Rust, with a Python wrapper - principally as a learning exercise"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maturin = "0.11.2"
# float_eq = "*"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies.float_eq]
version = "0.6"
features = ["derive"]

cargo-features = ["profile-overrides"]